<resources>
    <string name="app_name">P02_HidaMuhimmatulHusna</string>
    <string name="no_hp_wa_081554444241">No HP/WA : 081554444241</string>
    <string name="alamat_magetan">Alamat : Magetan</string>
    <string name="nim_18650115">NIM : 18650115</string>
    <string name="created_by">Created By</string>
    <string name="_18650115_hida_muhimmatul_husna_ti_uin_malang">18650115_HIDA MUHIMMATUL HUSNA_TI UIN MALANG</string>
    <string name="nama_hida_muhimmatul_husna">Nama : Hida Muhimmatul Husna</string>
</resources>